RESOLVED FIXED149879
JIT::emitGetGlobalProperty/emitPutGlobalProperty are only called from one place
https://bugs.webkit.org/show_bug.cgi?id=149879
Summary JIT::emitGetGlobalProperty/emitPutGlobalProperty are only called from one place
Filip Pizlo
Reported 2015-10-07 11:10:37 PDT
They should be inlined.
Attachments
the patch (11.72 KB, patch)
2015-10-07 11:12 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2015-10-07 11:12:48 PDT
Created attachment 262616 [details] the patch
Saam Barati
Comment 2 2015-10-07 11:14:21 PDT
Comment on attachment 262616 [details] the patch lgtm
WebKit Commit Bot
Comment 3 2015-10-07 11:14:30 PDT
Attachment 262616 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/JITPropertyAccess.cpp:785: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2015-10-07 11:18:25 PDT
I've got build fixes for everything locally.
Filip Pizlo
Comment 5 2015-10-07 11:27:37 PDT
Landed in http://trac.webkit.org/changeset/190675 The version of this that I ladned had the fix for 64-bit.
Filip Pizlo
Comment 6 2015-10-07 12:07:57 PDT
Note You need to log in before you can comment on or make changes to this bug.